objects/ssot__CarePlanTemplateGoal__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CarePlanTemplateGoalPriority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanTemplateId__c</fullName>
        <label>Care Plan Template</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionId__c</fullName>
        <label>Goal Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Plan Template Goal</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726626772_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanTemplateGoal_GoalDefinitionI_rel</label>
        <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
        <relationshipLabel>CarePlanTemplateGoal_GoalDefinitionI_rel</relationshipLabel>
        <relationshipName>rel_1716726626772_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726630887_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanTemplateGoal_CarePlanTemplat_rel</label>
        <referenceTo>ssot__CarePlanTemplate__dlm</referenceTo>
        <relationshipLabel>CarePlanTemplateGoal_CarePlanTemplat_rel</relationshipLabel>
        <relationshipName>rel_1716726630887_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>